.provarCaches/00D6C0000000xA6UAI/objects/Site__c.object
<CustomObject>
    <description>This Custom Object is used to provide visibility into the physical locations of Products which is critical to machines (ie. Batteries, compliance, current) as well as Training locations for CPR and other updated Certificates.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Site custom object was configured as a Master Detail to the Account Object to allow ARC to keep track of critical information regarding machines (batteries, compliance, current) as well as Training (location for CPR and updated certificates).</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Site Address where Product is located.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_City__c</fullName>
        <description>Site Address where Product is located.</description>
        <label>Site City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Country__c</fullName>
        <description>Site Address where Product is located.</description>
        <label>Site Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_State__c</fullName>
        <description>Site Address where Product is located.</description>
        <label>Site State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Street__c</fullName>
        <description>Site Address where Product is located.</description>
        <label>Site Street</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Zip_Postal_Code__c</fullName>
        <description>Site Address where Product is located.</description>
        <label>Site Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>